# MeterVision

./: .gitignore  README.md  application.py  pyproject.toml
notebook/: small_experiments.ipynb
src/metervision/: __init__.py  constant.py  constants.py
src/metervision/config/: directory_config.yaml  parameter_config.yaml
src/metervision/exception/: custom_exception.py
src/metervision/logger/: logs.py
src/metervision/models/: ocr_model.py  roi_display.py  roi_model.py  roi_reading.py
src/metervision/pipeline/: prediction.py  predictor.py
src/metervision/utils/: common.py  file_utils.py  roi_postprocessing.py
style/: sidebar_style.css
