[project]
name = "metervision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ansari Ehteesham Aqeel", email = "an.ehteesham@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.47.1",
    "ultralytics>=8.3.174",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
